--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2.1
+orbs:
+  slack: circleci/slack@3.3.0
 jobs:
   build:
     docker:
@@ -8,3 +10,49 @@ jobs:
       - checkout
       - run: go get -v -t -d ./...
       - run: go test -v ./...
+      - slack/notify-on-failure:
+          only_for_branches: master
+          
+  release-dry-run:
+    docker:
+      - image: circleci/golang:1.14
+    steps:
+      - checkout
+      - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
+      - run: sudo mv ./bin/goreleaser /usr/local/bin/
+      - run: goreleaser --rm-dist --skip-publish --snapshot
+      - slack/notify-on-failure:
+          only_for_branches: master
+          
+  release:
+    docker:
+      - image: circleci/golang:1.14
+    steps:
+      - checkout
+      - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
+      - run: sudo mv ./bin/goreleaser /usr/local/bin/
+      - run: goreleaser --rm-dist
+      - slack/status:
+          mentions: "@nick"
+        
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build:
+          context: Tilt Slack Context
+      - release-dry-run:
+          context: Tilt Slack Context
+          requires:
+            - build
+      - release:
+          context:
+          - Tilt Slack Context
+          - Tilt Release CLI Context
+          requires:
+            - release-dry-run
+          filters:
+            branches:
+              only: never-release-on-a-branch
+            tags:
+              only: /v[0-9]+.[0-9]+.[0-9]+/
