cluster: store the cluster spec in the cluster itself

--- a/examples/kind_custom_config.yaml
+++ b/examples/kind_custom_config.yaml
@@ -6,4 +6,7 @@ product: kind
 registry: ctlptl-registry
 kindV1Alpha4Cluster:
   name: my-cluster
+  nodes:
+  - role: control-plane
+  - role: worker
   
