cluster: delete and re-create the cluster when the config changes

--- a/examples/kind_custom_config.yaml
+++ b/examples/kind_custom_config.yaml
@@ -1,5 +1,6 @@
 # Creates a kind cluster with Kind's custom cluster config
 # https://pkg.go.dev/sigs.k8s.io/kind/pkg/apis/config/v1alpha4#Cluster
+# Creates a cluster with 2 nodes.
 apiVersion: ctlptl.dev/v1alpha1
 kind: Cluster
 product: kind
