--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,8 @@ jobs:
       - image: circleci/golang:1.14
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 19.03.12
       - run: git fetch --tags
       - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
       - run: sudo mv ./bin/goreleaser /usr/local/bin/
@@ -74,9 +76,12 @@ jobs:
       - image: circleci/golang:1.14
     steps:
       - checkout
+      - setup_remote_docker:
+          version: 19.03.12
       - run: git fetch --tags
       - run: curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
       - run: sudo mv ./bin/goreleaser /usr/local/bin/
+      - run: echo "$DOCKER_TOKEN" | docker login --username "$DOCKER_USERNAME" --password-stdin
       - run: goreleaser --rm-dist
       - slack/status:
           mentions: "nick"
@@ -100,6 +105,7 @@ workflows:
       - release:
           context:
           - Tilt Release CLI Context
+          - Tilt Docker Login Context
           filters:
             branches:
               only: never-release-on-a-branch
