--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -52,6 +52,11 @@ scoop:
   homepage: "https://ctlptl.dev/"
   description: "Making local Kubernetes clusters easy to set up and tear down"
   license: Apache-2.0
+dockers:
+- image_templates:
+    - "tiltdev/ctlptl"
+    - "tiltdev/ctlptl:{{ .Tag }}"
+  dockerfile: hack/Dockerfile
   
 # Uncomment these lines if you want to experiment with other
 # parts of the release process without releasing new binaries.
