--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,14 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.14
+      - image: circleci/golang:1.16
     working_directory: /go/src/github.com/tilt-dev/ctlptl
     steps:
       - checkout
       - run: go get -v -t -d ./...
       - run: go test -v ./...
-      - run: go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.30.0 && make golangci-lint
+      - run: cd .. && go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.38.0
+      - run: make golangci-lint
       - slack/notify-on-failure:
           only_for_branches: master
 
@@ -35,9 +36,9 @@ jobs:
       - kubernetes/install-kubectl
       - run: |
           set -ex
-          wget https://golang.org/dl/go1.15.5.linux-amd64.tar.gz
+          wget https://golang.org/dl/go1.16.2.linux-amd64.tar.gz
           sudo rm -fR /usr/local/go
-          sudo tar -C /usr/local -xzf go1.15.5.linux-amd64.tar.gz
+          sudo tar -C /usr/local -xzf go1.16.2.linux-amd64.tar.gz
       - run: |
           set -ex
           export MINIKUBE_VERSION=v1.15.0
@@ -59,7 +60,7 @@ jobs:
           
   release-dry-run:
     docker:
-      - image: circleci/golang:1.14
+      - image: circleci/golang:1.16
     steps:
       - checkout
       - setup_remote_docker:
@@ -73,7 +74,7 @@ jobs:
           
   release:
     docker:
-      - image: circleci/golang:1.14
+      - image: circleci/golang:1.16
     steps:
       - checkout
       - setup_remote_docker:
