upgrade to go 1.17 and make tests more robust

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,6 +8,10 @@ builds:
   goarch:
   - amd64
   - arm64
+  # https://goreleaser.com/deprecations/#builds-for-windowsarm64
+  ignore:
+  - goos: windows
+    goarch: arm64
 archives:
 - name_template: "{{ .ProjectName }}.{{ .Version }}.{{ .Os }}.{{ .Arch }}"
   replacements:
