--- a/test/minikube-cluster-network/Dockerfile
+++ b/test/minikube-cluster-network/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.15
-RUN go get github.com/google/ko/cmd/ko
+FROM golang:1.17
+RUN go install github.com/google/ko@latest
 WORKDIR /go/github.com/tilt-dev/ctlptl/test/cluster-network
 ADD . .
