--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,8 @@ jobs:
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
             $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
           sudo apt update
-          sudo apt upgrade containerd.io
+          export DEBIAN_FRONTEND=noninteractive
+          sudo apt upgrade -y containerd.io
       - run: |
           set -ex
           export MINIKUBE_VERSION=v1.23.2
