--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -27,12 +27,18 @@ checksum:
   name_template: 'checksums.txt'
 snapshot:
   name_template: "{{ .Tag }}-next"
+  
 changelog:
   sort: asc
+  use: github
   filters:
     exclude:
-    - '^docs:'
-    - '^test:'
+    - '^docs?:'
+    - '^tests?:'
+    - '^cleanup:'
+    - '^circleci:'
+    - '^ci:'
+    
 brews:
 - tap:
     owner: tilt-dev
