--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -78,10 +78,23 @@ scoop:
   description: "Making local Kubernetes clusters easy to set up and tear down"
   license: Apache-2.0
 dockers:
-- image_templates:
+- goos: linux
+  goarch: amd64
+  image_templates:
     - "tiltdev/ctlptl"
     - "tiltdev/ctlptl:{{ .Tag }}"
   dockerfile: hack/Dockerfile
+  build_flag_templates:
+  - "--platform=linux/amd64"
+- goos: linux
+  goarch: arm64
+  image_templates:
+    - "tiltdev/ctlptl"
+    - "tiltdev/ctlptl:{{ .Tag }}"
+  dockerfile: hack/Dockerfile
+  build_flag_templates:
+  - "--platform=linux/arm64"
+
   
 # Uncomment these lines if you want to experiment with other
 # parts of the release process without releasing new binaries.
