--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -88,6 +88,7 @@ dockers:
   - "--platform=linux/amd64"
 - goos: linux
   goarch: arm64
+  goarm: ''
   image_templates:
     - "tiltdev/ctlptl"
     - "tiltdev/ctlptl:{{ .Tag }}"
