--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,8 @@ jobs:
       - checkout
       - setup_remote_docker:
           version: 20.10.14
+      # https://discuss.circleci.com/t/arm-version-of-remote-docker/41624
+      - run: ssh remote-docker "sudo apt-get update; sudo apt-get install -y qemu-user-static binfmt-support"
       - run: git fetch --tags
       - run: go install github.com/goreleaser/goreleaser@latest
       - run: goreleaser --debug --rm-dist --skip-publish --snapshot
@@ -93,6 +95,8 @@ jobs:
       - checkout
       - setup_remote_docker:
           version: 20.10.14
+      # https://discuss.circleci.com/t/arm-version-of-remote-docker/41624
+      - run: ssh remote-docker "sudo apt-get update; sudo apt-get install -y qemu-user-static binfmt-support"
       - run: git fetch --tags
       - run: go install github.com/goreleaser/goreleaser@latest
       - run: ./hack/release.sh
