--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
 
   e2e-remote-docker:
     docker:
-      - image: gcr.io/windmill-public-containers/ctlptl-e2e-ci
+      - image: docker/tilt-ctlptl-ci
     steps:
       - checkout
       - setup_remote_docker:
