deps: install/use Docker 20.10.17 and Kind 0.15
Signed-off-by: Nick Sieger <nick@nicksieger.com>

--- a/hack/Dockerfile
+++ b/hack/Dockerfile
@@ -10,14 +10,14 @@
 #
 # Built with goreleaser.
 
-FROM debian:bullseye
+FROM debian:bullseye-slim
 
 RUN apt update && apt install -y curl ca-certificates liblz4-tool rsync socat
 
 # Install docker
 # Adapted from https://github.com/circleci/circleci-images/blob/staging/shared/images/Dockerfile-basic.template
 # Check https://download.docker.com/linux/static/stable/x86_64/ for latest versions
-ENV DOCKER_VERSION=20.10.15
+ENV DOCKER_VERSION=20.10.17
 RUN set -exu \
   && DOCKER_URL="https://download.docker.com/linux/static/stable/$(uname -m)/docker-${DOCKER_VERSION}.tgz" \
   && echo Docker URL: $DOCKER_URL \
@@ -36,12 +36,13 @@ RUN apt install -y apt-transport-https gnupg \
   && echo "deb http://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list \
   && apt update && apt install -y kubectl
 
-# install Kind
-ENV KIND_VERSION=v0.14.0
+# Install Kind
+ENV KIND_VERSION=v0.15.0
+ARG TARGETARCH
 RUN set -exu \
-  && case $(uname -m) in aarch64) arch=arm64 ;; x86_64) arch=amd64 ;; *) arch=$(uname -m) ;; esac \
-  && curl -fLo ./kind-linux-$arch "https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-linux-$arch" \
-  && chmod +x ./kind-linux-$arch \
-  && mv ./kind-linux-$arch /usr/local/bin/kind
+  && KIND_URL="https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-linux-$TARGETARCH" \
+  && curl --silent --show-error --location --fail --retry 3 --output ./kind-linux-$TARGETARCH "$KIND_URL" \
+  && chmod +x ./kind-linux-$TARGETARCH \
+  && mv ./kind-linux-$TARGETARCH /usr/local/bin/kind
 
 COPY ctlptl /usr/local/bin/ctlptl
