--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
           
   release-dry-run:
     docker:
-      - image: cimg/go:1.19
+      - image: golang:1.19-bullseye
     environment:
       DOCKER_CLI_EXPERIMENTAL: enabled
     steps:
@@ -82,13 +82,19 @@ jobs:
       - run: ssh remote-docker "sudo apt-get update; sudo apt-get install -y qemu-user-static binfmt-support"
       - run: git fetch --tags
       - run: go install github.com/goreleaser/goreleaser@latest
+      - run: |
+          pushd /tmp
+          curl -O https://download.docker.com/linux/debian/dists/bullseye/pool/stable/amd64/docker-ce-cli_20.10.17~3-0~debian-bullseye_amd64.deb
+          dpkg -i *.deb
+          rm -f *.deb
+          popd
       - run: goreleaser --debug --rm-dist --skip-publish --snapshot
       - slack/notify-on-failure:
           only_for_branches: main
           
   release:
     docker:
-      - image: cimg/go:1.19
+      - image: golang:1.19-bullseye
     environment:
       DOCKER_CLI_EXPERIMENTAL: enabled
     steps:
@@ -99,6 +105,12 @@ jobs:
       - run: ssh remote-docker "sudo apt-get update; sudo apt-get install -y qemu-user-static binfmt-support"
       - run: git fetch --tags
       - run: go install github.com/goreleaser/goreleaser@latest
+      - run: |
+          pushd /tmp
+          curl -O https://download.docker.com/linux/debian/dists/bullseye/pool/stable/amd64/docker-ce-cli_20.10.17~3-0~debian-bullseye_amd64.deb
+          dpkg -i *.deb
+          rm -f *.deb
+          popd
       - run: ./hack/release.sh
       - slack/status:
           mentions: "nick"
