--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,6 +8,8 @@ builds:
   goarch:
   - amd64
   - arm64
+  env:
+    - CGO_ENABLED=0
   # https://goreleaser.com/deprecations/#builds-for-windowsarm64
   ignore:
   - goos: windows
