--- a/test/kind/builder.yaml
+++ b/test/kind/builder.yaml
@@ -12,11 +12,11 @@ spec:
       - name: builder
         image: HOST_FROM_CONTAINER_RUNTIME/ko-builder
         command: ["bash", "-c",
-          "go get github.com/tilt-dev/ctlptl/test/simple-server && ko publish --insecure-registry github.com/tilt-dev/ctlptl/test/simple-server"]
+          "go get github.com/tilt-dev/ctlptl/test/simple-server && ko publish -B --insecure-registry github.com/tilt-dev/ctlptl/test/simple-server"]
         env:
         - name: KO_DOCKER_REPO
           value: HOST_FROM_CLUSTER_NETWORK
         - name: GO111MODULE
           value: "off"
       restartPolicy: Never
-  backoffLimit: 4
+  backoffLimit: 0
