test: integration test improvements
- reorganize directory structure
- verify that the simple test server starts up
- better diagnostics when things fail

Signed-off-by: Nick Santos <nick.santos@docker.com>

--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -11,20 +11,20 @@
 
 FROM golang:1.20-buster
 
-RUN apt update && apt install -y curl ca-certificates liblz4-tool rsync socat
+RUN apt update && apt install -y curl ca-certificates liblz4-tool rsync socat gpg
 
 # Install docker
 # Adapted from https://github.com/circleci/circleci-images/blob/staging/shared/images/Dockerfile-basic.template
 # Check https://download.docker.com/linux/static/stable/x86_64/ for latest versions
-ENV DOCKER_VERSION=20.10.17
-RUN set -exu \
-  && DOCKER_URL="https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz" \
-  && echo Docker URL: $DOCKER_URL \
-  && curl --silent --show-error --location --fail --retry 3 --output /tmp/docker.tgz "${DOCKER_URL}" \
-  && ls -lha /tmp/docker.tgz \
-  && tar -xz -C /tmp -f /tmp/docker.tgz \
-  && mv /tmp/docker/* /usr/bin \
-  && rm -rf /tmp/docker /tmp/docker.tgz \
+ENV DOCKER_VERSION=24.0.4
+RUN install -m 0755 -d /etc/apt/keyrings \
+    && curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
+    && chmod a+r /etc/apt/keyrings/docker.gpg \
+    && echo "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
+       "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | \
+       tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+RUN apt update && apt install -y docker-ce-cli docker-buildx-plugin \
   && which docker \
   && (docker version || true)
 
