--- a/test/k3d-cluster-network/Dockerfile
+++ b/test/k3d-cluster-network/Dockerfile
@@ -1,10 +1,11 @@
 # syntax=docker/dockerfile:1
 
 FROM golang:1.20-alpine
-RUN apk update && apk add bash git
+RUN apk update && apk add bash git curl tar
 ENV CGO_ENABLED=0
-RUN --mount=type=cache,target=/go/pkg/mod \
-    --mount=type=cache,target=/root/.cache/go-build \
-    go install github.com/google/ko@latest
+ENV KO_VERSION=0.14.1
+RUN curl -fsSL https://github.com/ko-build/ko/releases/download/v${KO_VERSION}/ko_${KO_VERSION}_Linux_$(uname -m).tar.gz \
+    | tar -xzv ko && \
+    mv ko /usr/local/bin/ko
 WORKDIR /go/github.com/tilt-dev/ctlptl/test/cluster-network
 ADD . .
