--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
 
   e2e-remote-docker:
     docker:
-      - image: docker/tilt-ctlptl-ci@sha256:e388eaf36b098d3d7a35fc2c173d70acfc544e72c40058741eed34e53853a009
+      - image: docker/tilt-ctlptl-ci@sha256:3768fefdc7ede6e54b1aaedc3a36c32c98a003b546de2fa4f6dff69f1a0fcad5
     steps:
       - checkout
       - setup_remote_docker
@@ -61,8 +61,6 @@ jobs:
   release-dry-run:
     docker:
       - image: golang:1.21-bookworm
-    environment:
-      DOCKER_CLI_EXPERIMENTAL: enabled
     steps:
       - checkout
       - setup_remote_docker
@@ -84,7 +82,7 @@ jobs:
             "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
             $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
           apt-get update
-          apt-get install -y docker-ce docker-ce-cli containerd.io
+          apt-get install -y docker-ce-cli docker-buildx-plugin
           docker --version
           rm -rf /var/lib/apt/lists/*
           
@@ -96,8 +94,6 @@ jobs:
   release:
     docker:
       - image: golang:1.21-bookworm
-    environment:
-      DOCKER_CLI_EXPERIMENTAL: enabled
     steps:
       - checkout
       - setup_remote_docker
@@ -119,7 +115,7 @@ jobs:
             "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
             $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
           apt-get update
-          apt-get install -y docker-ce docker-ce-cli containerd.io
+          apt-get install -y docker-ce-cli docker-buildx-plugin
           docker --version
           rm -rf /var/lib/apt/lists/*
           
